# xeq

./: .gitignore  .gitmodules  README.md  minimization_result.txt  sat_result.txt
cases/case0/: gf.v  rf.v
cases2/case2/: gf.v  rf.v
cases_beta/case10/: gf.v  rf.v
cases_beta/case11/: gf.v  rf.v
cases_beta/case12/: gf.v  rf.v
cases_beta/case13/: gf.v  rf.v
cases_beta/case14/: gf.v  rf.v
cases_beta/case15/: gf.v  rf.v
cases_beta/case16/: gf.v  rf.v
cases_beta/case17/: gf.v  rf.v
cases_beta/case18/: gf.v  rf.v
program/: CMakeLists.txt
program/include/: abcoptimize.h  abcsolve.h  bddsolve.h  cec.h  decompose.h  minimize.h  node.h  satexp.h  satexp2.h  satsolve.h
program/lib/: CMakeLists.txt
program/misc/: ceverify.cpp
program/src/: abcoptimize.cpp  abcsolve.cpp  cec.cpp  decompose.cpp  main.cpp  minimize.cpp  node.cpp  satexp.cpp  satexp2.cpp  satsolve.cpp  satsolve2.cpp
